fix: missing margin in inset

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,4 +1,5 @@
 .inset {
   max-width: 80rem; /* 1280 px */
   padding-inline: 1rem; /* 16px */
+  margin-inline: auto;
 }
